# target-hubspot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  mypy.ini  pyproject.toml
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: test.yml
target_hubspot/: __init__.py  auth.py  client.py  config.py  constants.py  context.py  decorators.py  encoder.py  exception.py  exceptions.py  model.py  parameters.py  pydantic_config.py  sinks.py  streams.py  target.py
target_hubspot/remote/: authentication.py  client.py  model.py
tests/: __init__.py  test_core.py
tests/resources/: contacts.jsonl  deals.jsonl
