[tool.poetry]
name = "target-hubspot"
version = "0.0.1"
description = "`target-hubspot` is a Singer target for HubSpot, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Anden Acitelli <anden@akk.io>"]
keywords = [
    "ELT",
    "HubSpot",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.10.12"
singer-sdk = { version="^0.30.0" }
fs-s3fs = { version = "^1.1.1", optional = true }
requests = "^2.31.0"
hubspot-api-client = "^8.0.0"
pydantic = "^2.5.2"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
singer-sdk = { version="^0.30.0", extras = ["testing"] }
mypy = "^1.7.1"
types-python-dateutil = "^2.8.19.14"
types-jsonschema = "^4.20.0.0"
types-pytz = "^2023.3.1.1"
types-simplejson = "^3.19.0.2"
types-pyyaml = "^6.0.12.12"
types-pygments = "^2.17.0.0"
types-colorama = "^0.4.15.12"
types-setuptools = "^68.2.0.2"
types-six = "^1.16.21.9"
types-requests = "^2.0.0"
urllib3 = "^1.0.0"
cached-property = "^1.5.2"

[tool.pytest.ini_options]
addopts = [
    "--disable-warnings", # Disable at some point in the future
    "--import-mode=importlib", # Generally recommend as best practice by pytest https://docs.pytest.org/en/7.1.x/explanation/pythonpath.html
    "--junitxml=build/test_report.xml", # Used for CircleCI display
    "-v" # We tend to want as much output as possible
]

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["target_hubspot"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["target_hubspot"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-hubspot = 'target_hubspot.target:TargetHubSpot.cli'
